# oss-finding-mcp

./: .gitignore  README.md  install.sh  pyproject.toml  run.sh
src/oss_finding/: config.py  correlator.py  diff_analyzer.py  models.py  pattern_detector.py  server.py  store.py  surface_analyzer.py
src/oss_finding/rules/semgrep/: dangerous_crypto.yaml  dangerous_deser.yaml  dangerous_injection.yaml  go_taint.yaml  java_spring_taint.yaml  js_taint.yaml  php_taint.yaml  python_taint.yaml
src/oss_finding/scanners/: base.py  codeql.py  gitleaks.py  osv.py  semgrep.py
