[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oss-finding-mcp"
version = "0.1.0"
description = "MCP server for finding vulnerabilities in codebases using open-source security tools"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
oss-finding-mcp = "oss_finding.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/oss_finding"]
